@@ -22,7 +22,6 @@ import com.lnf.service.email.ExcelReportService;
 import com.lnf.service.email.ThymeleafDocumentService;
 import jakarta.transaction.Transactional;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
 import org.springframework.web.reactive.function.BodyInserters;
@@ -36,7 +35,6 @@ public class EmailClientImpl extends BaseWebClientService implements ThymeleafDo
     private final WebClient webClient;
     public static final String ERROR_OCCURRED_WHILE_GENERATING_EXCEL_BYTES_S = "Error occurred while generating Excel bytes [%s]";
 
-    @Autowired
     public EmailClientImpl(@Qualifier("emailServiceWebClient") WebClient webClient) {
         this.webClient = webClient;
     }
@@ -54,7 +52,7 @@ public class EmailClientImpl extends BaseWebClientService implements ThymeleafDo
                     .block();
         } catch (Exception ex) {
             log.error("Error occurred while generating Excel bytes {}", ex.getMessage(), ex);
-            throw new LnFException(String.format(ERROR_OCCURRED_WHILE_GENERATING_EXCEL_BYTES_S, ex.getMessage()), ex);
+            throw new LnFException(ERROR_OCCURRED_WHILE_GENERATING_EXCEL_BYTES_S.formatted(ex.getMessage()), ex);
         }
     }
 
@@ -73,7 +71,7 @@ public class EmailClientImpl extends BaseWebClientService implements ThymeleafDo
                     .block();
         } catch (Exception ex) {
             log.error("Error occurred while generating PDF {}", ex.getMessage(), ex);
-            throw new LnFException(String.format("Error occurred while generating PDF [%s]", ex.getMessage()), ex);
+            throw new LnFException("Error occurred while generating PDF [%s]".formatted(ex.getMessage()), ex);
         }
     }
 
